manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-demo-go-app
  namespace: tenant2
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: flux-demo-go-app
  template:
    metadata:
      labels:
        app: flux-demo-go-app
    spec:
      containers:
      - name: flux-demo-go-app
        image: hpark2330/flux-demo-go-app:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 32Mi
