manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-demo-go-app
  namespace: tenant2
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
