manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godemo
  namespace: tenant2
  labels:
    app: godemo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "go.flux.demo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flux-demo-go-app
                port:
                  number: 8080
